# DoubleML.jl

./: .gitignore  CONTRIBUTING.md  LICENSE  Manifest.toml  Project.toml  README.md
.github/workflows/: CI.yml
docs/: Manifest.toml  Project.toml  make.jl
docs/src/: api.md  examples.md  index.md  user-guide.md
docs/src/notebooks/: irm_introduction.md  lplr_introduction.md  plr_introduction.md
docs/src/tutorials/: irm.md  lplr.md  plr.md
examples/: Manifest.toml  Project.toml
examples/IRM/: irm_introduction.jl  irm_introduction.md
examples/LPLR/: lplr_introduction.jl
examples/PLR/: plr_introduction.jl
src/: DoubleML.jl  data.jl  evaluation.jl  inference.jl  scores.jl  types.jl  utils.jl
src/datasets/dgp/: irm_data.jl  lplr_LZZ2020.jl  plr_CCDDHNR2018.jl
src/fitting/: abstract.jl  irm.jl  lplr.jl  plr.jl
test/: Manifest.toml  Project.toml  README.md  runtests.jl
test/.CondaPkg/: meta  pixi.toml
test/test_models/: test_irm.jl  test_lplr.jl  test_plr.jl
test/test_python/: .gitignore  README.md  config.toml  fit_julia.jl  fit_python.py  generate_data_julia.jl  generate_data_python.py  pyproject.toml  setup_python_env.sh  validate.jl
test/test_python/benchmarks/: README.md  benchmark_julia.jl  benchmark_python.py  benchmark_results_julia.json  benchmark_results_python.json  benchmarks.md  generate_report.jl  run_benchmark.sh
test/test_unit/: test_aggregation.jl  test_bootstrap.jl  test_data.jl  test_edge_cases.jl  test_evaluation.jl  test_irm_data.jl  test_resampling.jl  test_scores.jl  test_statsapi.jl
