[project]
name = "test-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "doubleml>=0.11.2",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyperf>=2.10.0",
    "scikit-learn>=1.8.0",
    "toml>=0.10.2",
    "xgboost>=3.2.0",
]
